- new recommendation system based on favorite list - some pages available for not-registered users